--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: MTB Lifts
   location: Location
   social: Around the Web
   credits: Credits
@@ -51,12 +51,13 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Vijayawada | Amaravati | Guntur
+  - line: Hyderabad | Rajhmundary | Nellore
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+credits: 'Coming Soon.'
 
 # Build settings
 markdown: kramdown
 permalink: pretty
+
